1. Fixed the battle log, added a scrollbar. 2. Made a substitution of the button "Your move" on the button "Waiting for the opponent's move". 3. Added cleaning zones "Attack" and "Protection", at the start of a new battle.

--- a/20180917_FC_ASP_Demo_01/css/style.css
+++ b/20180917_FC_ASP_Demo_01/css/style.css
@@ -58,7 +58,10 @@
 }
 
 #fight_log {
+    max-height: 200px;
     padding: 0 20px;
+    overflow: auto;
+    word-wrap: break-word;
 }
 
 #your_turn,
